--- a/src/App.css
+++ b/src/App.css
@@ -5,14 +5,34 @@
 .SearchBar {
   background-color: gray;
   width: 100%;
-  height: 10rem;
+  height: 6rem;
+}
+
+.SearchBar input {
+  margin: 1rem;
 }
 
 .SearchResults {
   margin: 2rem 5rem;
   width: 30%;
-  height: 30rem;
   background-color: darkblue;
+  text-align: left;
+  color: white;
+}
+
+
+.SearchResults div {
+  padding: 1rem;
+}
+
+.SearchResults h2 {
+  margin: 0;
+}
+
+.SearchResults p {
+  margin: 0;
+  padding: 0;
+  padding-bottom: 1rem;
 }
 
 .Playlist {
@@ -43,3 +63,4 @@
   padding: 0;
   padding-bottom: 1rem;
 }
+
